corrected button letter spacing

--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@ h4 {
   border-radius: 30px;
   color: black;
   text-align: center;
-  letter-spacing: 15git px;
+  letter-spacing: 15px;
   font-size: 25px;
   margin: 4px 2px;
   cursor: pointer;
